--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Where Kai is allowed to go jogging</h1>
-  <div id="mapid" style="width: 1000px; height: 800px;"></div>
+  <div id="mapid" style="width: 100%; height: 700px;"></div>
   <script>
     var mymap = L.map('mapid').setView([48.879080, 2.384734], 14);
     L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
@@ -25,7 +25,21 @@
     var circle = L.circle([48.879080, 2.384734], {
 		color: 'red',
 		fillColor: '#f03',
-		fillOpacity: 0.2,
+		fillOpacity: 0.0,
+		radius: 1000
+    	}).addTo(mymap);
+    var circle2 = L.circle([48.882915, 2.406993], {
+		color: 'green',
+		fillColor: '#f0f03',
+		fillOpacity: 0.0,
+		weight: 1,
+		radius: 1000
+    	}).addTo(mymap);
+    var circle2 = L.circle([48.872261, 2.393489], {
+		color: 'green',
+		fillColor: '#f0f03',
+		fillOpacity: 0.0,
+		weight: 1,
 		radius: 1000
     	}).addTo(mymap);
 </script>
