--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
 		radius: 1000
     	}).addTo(mymap);
 </script>
+<p><a href="https://github.com/kaicarver/leaflet">GitHub</a></p>
 </body>
 </html>
