--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Where Kai is allowed to go jogging</h1>
   <div id="mapid" style="width: 100%; height: 700px;"></div>
+  <script src="arun.js" type="text/javascript"></script>
   <script>
     var mymap = L.map('mapid').setView([48.879080, 2.384734], 14);
     L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
@@ -41,7 +42,10 @@
 		fillOpacity: 0.0,
 		weight: 1,
 		radius: 1000
-    	}).addTo(mymap);
+		}).addTo(mymap);
+
+	L.geoJSON(aRun).addTo(mymap);
+
 </script>
 <p><a href="https://github.com/kaicarver/leaflet">GitHub</a></p>
 </body>
