--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Where Kai is allowed to go jogging</h1>
   <div id="mapid" style="width: 100%; height: 700px;"></div>
-  <script src="arun.js" type="text/javascript"></script>
+  <script src="runs.js" type="text/javascript"></script>
   <script>
     var mymap = L.map('mapid').setView([48.879080, 2.384734], 14);
     L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
@@ -44,7 +44,8 @@
 		radius: 1000
 		}).addTo(mymap);
 
-	L.geoJSON(aRun).addTo(mymap);
+	L.geoJSON(runs[0]).addTo(mymap);
+	L.geoJSON(runs[1]).addTo(mymap);
 
 </script>
 <p><a href="https://github.com/kaicarver/leaflet">GitHub</a></p>
