--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
 </head>
 <body>
-  <h1>Where Kai is allowed to go jogging</h1>
-  <div id="mapid" style="width: 100%; height: 700px;"></div>
+  <div>Where Kai is allowed to go jogging / <a href="https://github.com/kaicarver/leaflet">GitHub</a></div>
+  <div id="mapid" style="width: 100%; height: 650px;"></div>
   <script src="runs.js" type="text/javascript"></script>
   <script>
     var mymap = L.map('mapid').setView([48.879080, 2.384734], 14);
@@ -49,6 +49,5 @@
 	}
 
 </script>
-<p><a href="https://github.com/kaicarver/leaflet">GitHub</a></p>
 </body>
 </html>
