--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <div id="mapid" style="width: 100%; height: 650px;"></div>
   <script src="runs.js" type="text/javascript"></script>
   <script>
+	let url = new URL(location.href);
+	let lat = url.searchParams.get("lat") || 48.879080;
+	let lon = url.searchParams.get("lon") || 2.384734;
+let searchParams = new URLSearchParams(url.search);
+console.log(searchParams.get('c'));  // outputs "m2-m3-m4-m5"
     var mymap = L.map('mapid').setView([48.879080, 2.384734], 14);
     L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
 		maxZoom: 18,
@@ -23,7 +28,7 @@
 		accessToken: 'pk.eyJ1Ijoia2FpY2FydmVyIiwiYSI6ImNpdW8waDdrZjAxNWsydXBlNW9vNDhvdHQifQ.pH2YweyGfZbSSj27QS9StA'
 	}).addTo(mymap);
     var marker = L.marker([48.86, 2.36]).addTo(mymap);
-    var circle = L.circle([48.879080, 2.384734], {
+    var circle = L.circle([lat, lon], {
 		color: 'red',
 		fillColor: '#f03',
 		fillOpacity: 0.0,
