--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   <script src="runs.js" type="text/javascript"></script>
   <script>
 	let url = new URL(location.href);
-	let lat = url.searchParams.get("lat") || 48.879080;
-	let lon = url.searchParams.get("lon") || 2.384734;
-let searchParams = new URLSearchParams(url.search);
-console.log(searchParams.get('c'));  // outputs "m2-m3-m4-m5"
+	let lat = 48.879080;
+	let lon = 2.384734;
+	console.log(lat, lon)
+	lat = parseFloat(url.searchParams.get("lat")) || 48.879080;
+	lon = parseFloat(url.searchParams.get("lon")) || 2.384734;
+	console.log(lat, lon)
     var mymap = L.map('mapid').setView([48.879080, 2.384734], 14);
     L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
 		maxZoom: 18,
