--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
+  <style>
+	  input:not([type=submit]) { width: 80px; }
+  </style>
 </head>
 <body>
-  <div>Where Kai is allowed to go jogging / <a href="https://github.com/kaicarver/leaflet">GitHub</a></div>
+	<form method=GET>
+		<div>Where
+			<input name="name" type="text" value="Kai" />
+			<input name="lat" type="text" value="48.879080" />
+			<input name="lon" type="text" value="2.384734" />
+			<input type="submit" />
+			is allowed to go jogging
+			/ <a href="https://github.com/kaicarver/leaflet">GitHub</a>
+		</div>
+	</form>
   <div id="mapid" style="width: 100%; height: 650px;"></div>
   <script src="runs.js" type="text/javascript"></script>
   <script>
@@ -15,6 +27,7 @@
 	let lat = 48.879080;
 	let lon = 2.384734;
 	console.log(lat, lon)
+	//lat=48.88&lon=2.38&
 	lat = parseFloat(url.searchParams.get("lat")) || 48.879080;
 	lon = parseFloat(url.searchParams.get("lon")) || 2.384734;
 	console.log(lat, lon)
