--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <div id="mapid" style="width: 100%; height: 650px;"></div>
   <script src="runs.js" type="text/javascript"></script>
   <script>
+	window.onload = () => { alert('Welcome to the Safe Space!') }
 	let url = new URL(location.href);
 	let lat = parseFloat(url.searchParams.get("lat")) || 48.879080;
 	let lon = parseFloat(url.searchParams.get("lon")) || 2.384734;
