--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
-	<form method=GET>
+	<form id="myform" method=GET>
 		<div>Where
 			<input name="name" type="text" value="Kai" />
 			<input name="lat" type="text" value="48.879080" />
@@ -23,7 +23,9 @@
   <div id="mapid" style="width: 100%; height: 650px;"></div>
   <script src="runs.js" type="text/javascript"></script>
   <script>
-	window.onload = () => { alert('Welcome to the Safe Space ' + url.searchParams.get("name")) }
+	window.onload = () => {
+		alert('Welcome to the Safe Space, ' + (url.searchParams.get("name") || 'stranger') + '!')
+	}
 	let url = new URL(location.href);
 	let lat = parseFloat(url.searchParams.get("lat")) || 48.879080;
 	let lon = parseFloat(url.searchParams.get("lon")) || 2.384734;
