--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 			<input type="submit" />
 			is allowed to go jogging
 			/ <a href="https://github.com/kaicarver/leaflet">GitHub</a>
+			/ <a href="https://www.strava.com/dashboard?feed_type=my_activity">Strava</a>
 		</div>
 	</form>
   <div id="mapid" style="width: 100%; height: 650px;"></div>
   <script src="runs.js" type="text/javascript"></script>
   <script>
 	window.onload = () => {
-		alert('Welcome to the Safe Space, ' + (url.searchParams.get("name") || 'stranger') + '!')
+		alert('Welcome to the Safe Space, ' + (url.searchParams.get("name") || document.forms.myform.name.value || 'stranger') + '!')
 	}
 	let url = new URL(location.href);
 	let lat = parseFloat(url.searchParams.get("lat")) || 48.879080;
