--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
   <style>
-	  input:not([type=submit]) { width: 80px; }
+	  input:not([type=submit]) { width: 60px; }
+	  input[name=name] { width: 80px; }
   </style>
 </head>
 <body>
 	<form id="myform" method=GET>
 		<div>Where
-			<input name="name" type="text" value="Kai" />
-			<input name="lat" type="text" value="48.879080" />
-			<input name="lon" type="text" value="2.384734" />
+			<input name="name" type="text" value="Emmanuel" />
+			<input name="lat" type="text" value="48.87062" />
+			<input name="lon" type="text" value="2.31693" />
 			<input type="submit" />
 			is allowed to go jogging
 			/ <a href="https://github.com/kaicarver/leaflet">GitHub</a>
@@ -25,7 +26,9 @@
   <script src="runs.js" type="text/javascript"></script>
   <script>
 	window.onload = () => {
-		alert('Welcome to the Safe Space, ' + (url.searchParams.get("name") || document.forms.myform.name.value || 'stranger') + '!')
+		let name = url.searchParams.get("name") || document.forms.myform.name.value || 'stranger';
+		console.log(`Welcome to the Safe Space, ${name}!`);
+		document.title = `${name}'s Safe Space`;
 	}
 	let url = new URL(location.href);
 	let lat = parseFloat(url.searchParams.get("lat")) || 48.879080;
