--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
   <div id="mapid" style="width: 100%; height: 650px;"></div>
   <script src="runs.js" type="text/javascript"></script>
   <script>
+	let name = 'Toto';
 	window.onload = () => {
-		let name = url.searchParams.get("name") || document.forms.myform.name.value || 'stranger';
+		name = url.searchParams.get("name") || name;
 		console.log(`Welcome to the Safe Space, ${name}!`);
 		document.title = `${name}'s Safe Space`;
 	}
@@ -44,28 +45,27 @@
 		zoomOffset: -1,
 		accessToken: 'pk.eyJ1Ijoia2FpY2FydmVyIiwiYSI6ImNpdW8waDdrZjAxNWsydXBlNW9vNDhvdHQifQ.pH2YweyGfZbSSj27QS9StA'
 	}).addTo(mymap);
-    var marker = L.marker([48.86, 2.36]).addTo(mymap);
+    //var marker = L.marker([48.86, 2.36]).addTo(mymap);
     var circle = L.circle([lat, lon], {
 		color: 'red',
 		fillColor: '#f03',
 		fillOpacity: 0.0,
 		radius: 1000
     	}).addTo(mymap);
-    var circle2 = L.circle([48.882915, 2.406993], {
+    L.circle([48.882915, 2.406993], {
 		color: 'green',
 		fillColor: '#f0f03',
 		fillOpacity: 0.0,
 		weight: 1,
 		radius: 1000
     	}).addTo(mymap);
-    var circle2 = L.circle([48.872261, 2.393489], {
+    L.circle([48.872261, 2.393489], {
 		color: 'green',
 		fillColor: '#f0f03',
 		fillOpacity: 0.0,
 		weight: 1,
 		radius: 1000
 		}).addTo(mymap);
-
 	for (const run of runs) {
 		L.geoJSON(run).addTo(mymap);
 	}
