--- a/index.html
+++ b/index.html
@@ -13,61 +13,70 @@
 <body>
 	<form id="myform" method=GET>
 		<div>Where
-			<input name="name" type="text" value="Emmanuel" />
+			<input name="name" type="text" value="Toto" />
 			<input name="lat" type="text" value="48.87062" />
 			<input name="lon" type="text" value="2.31693" />
 			<input type="submit" />
 			is allowed to go jogging
 			/ <a href="https://github.com/kaicarver/leaflet">GitHub</a>
 			/ <a href="https://www.strava.com/dashboard?feed_type=my_activity">Strava</a>
+			/ <a href="#name=Kai&lat=48.87908&lon=2.384734">Kai</a>
 		</div>
 	</form>
   <div id="mapid" style="width: 100%; height: 650px;"></div>
   <script src="runs.js" type="text/javascript"></script>
   <script>
-	let name = 'Toto';
+	let name = 'Manu';
+	let lat = 48.87062;
+	let lon = 2.31693;
+	let url = new URL(location.href);
 	window.onload = () => {
 		name = url.searchParams.get("name") || name;
+		lat = parseFloat(url.searchParams.get("lat")) || lat;
+		lon = parseFloat(url.searchParams.get("lon")) || lon;
 		console.log(`Welcome to the Safe Space, ${name}!`);
+		document.forms.myform.name.value = name;
+		document.forms.myform.lat.value = lat;
+		document.forms.myform.lon.value = lon;
 		document.title = `${name}'s Safe Space`;
+		displayMap();
 	}
-	let url = new URL(location.href);
-	let lat = parseFloat(url.searchParams.get("lat")) || 48.879080;
-	let lon = parseFloat(url.searchParams.get("lon")) || 2.384734;
-    var mymap = L.map('mapid').setView([48.879080, 2.384734], 14);
-    L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
-		maxZoom: 18,
-		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
-			'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-		id: 'mapbox/streets-v11',
-		tileSize: 512,
-		zoomOffset: -1,
-		accessToken: 'pk.eyJ1Ijoia2FpY2FydmVyIiwiYSI6ImNpdW8waDdrZjAxNWsydXBlNW9vNDhvdHQifQ.pH2YweyGfZbSSj27QS9StA'
-	}).addTo(mymap);
-    //var marker = L.marker([48.86, 2.36]).addTo(mymap);
-    var circle = L.circle([lat, lon], {
-		color: 'red',
-		fillColor: '#f03',
-		fillOpacity: 0.0,
-		radius: 1000
-    	}).addTo(mymap);
-    L.circle([48.882915, 2.406993], {
-		color: 'green',
-		fillColor: '#f0f03',
-		fillOpacity: 0.0,
-		weight: 1,
-		radius: 1000
-    	}).addTo(mymap);
-    L.circle([48.872261, 2.393489], {
-		color: 'green',
-		fillColor: '#f0f03',
-		fillOpacity: 0.0,
-		weight: 1,
-		radius: 1000
+	function displayMap() {
+		var mymap = L.map('mapid').setView([lat, lon], 14);
+		L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+			maxZoom: 18,
+			attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+				'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+				'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+			id: 'mapbox/streets-v11',
+			tileSize: 512,
+			zoomOffset: -1,
+			accessToken: 'pk.eyJ1Ijoia2FpY2FydmVyIiwiYSI6ImNpdW8waDdrZjAxNWsydXBlNW9vNDhvdHQifQ.pH2YweyGfZbSSj27QS9StA'
 		}).addTo(mymap);
-	for (const run of runs) {
-		L.geoJSON(run).addTo(mymap);
+		//var marker = L.marker([48.86, 2.36]).addTo(mymap);
+		var circle = L.circle([lat, lon], {
+			color: 'red',
+			fillColor: '#f03',
+			fillOpacity: 0.0,
+			radius: 1000
+		}).addTo(mymap);
+		L.circle([48.882915, 2.406993], {
+			color: 'green',
+			fillColor: '#f0f03',
+			fillOpacity: 0.0,
+			weight: 1,
+			radius: 1000
+		}).addTo(mymap);
+		L.circle([48.872261, 2.393489], {
+			color: 'green',
+			fillColor: '#f0f03',
+			fillOpacity: 0.0,
+			weight: 1,
+			radius: 1000
+		}).addTo(mymap);
+		for (const run of runs) {
+			L.geoJSON(run).addTo(mymap);
+		}
 	}
 
 </script>
