get ready to update link via JS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			is allowed to go jogging
 			/ <a href="https://github.com/kaicarver/leaflet">GitHub</a>
 			/ <a href="https://www.strava.com/dashboard?feed_type=my_activity">Strava</a>
-			/ <a href="#name=Kai&lat=48.87908&lon=2.384734" name="kailink">Kai</a>
+			/ <a href="#name=Kai&lat=48.87908&lon=2.384734" id="kailink">Kai</a>
 		</div>
 	</form>
   <div id="mapid" style="width: 100%; height: 650px;"></div>
