finally: safe space default Manu, with link to Kai's

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		document.forms.myform.lat.value = lat;
 		document.forms.myform.lon.value = lon;
 		document.forms.myform.lon.value = lon;
-		//name=Kai&lat=48.87908&lon=2.384734
+		document.getElementById('kailink').search = "?name=Kai&lat=48.87908&lon=2.384734";
 		document.title = `${name}'s Safe Space`;
 		displayMap();
 	}
