--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 			is allowed to go jogging
 			/ <a href="https://github.com/kaicarver/leaflet">GitHub</a>
 			/ <a href="https://www.strava.com/dashboard?feed_type=my_activity">Strava</a>
-			/ <a href="#name=Kai&lat=48.87908&lon=2.384734" id="kailink">Kai</a>
+			/ <a href="#name=Kai&lat=48.87908&lon=2.384734" class="kailink">Kai</a>
+			/ <a href="#name=Manu&lat=48.87062&lon=2.31693" class="kailink">Manu</a>
 		</div>
 	</form>
   <div id="mapid" style="width: 100%; height: 650px;"></div>
@@ -39,8 +40,9 @@
 		document.forms.myform.lat.value = lat;
 		document.forms.myform.lon.value = lon;
 		document.forms.myform.lon.value = lon;
-		let link = document.getElementById('kailink');
-		link.search = link.hash.replace("#", "?") // "?name=Kai&lat=48.87908&lon=2.384734";
+		let list = document.getElementsByClassName('kailink');
+		for (const link of list) 
+			link.search = link.hash.replace("#", "?")
 		document.title = `${name}'s Safe Space`;
 		displayMap(name);
 	}
