almost forgot CC

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 			/ <a href="https://github.com/kaicarver/leaflet">GitHub</a>
 			/ <a href="https://www.strava.com/dashboard?feed_type=my_activity">Strava</a>
 			/ Safe:
-			<a href="#name=Kai&lat=48.87908&lon=2.384734" class="kailink">Kai</a>
 			<a href="#name=Man&lat=48.87062&lon=2.31693" class="kailink">Man</a>
+			<a href="#name=Man&lat=48.854444&lon=2.320833" class="kailink">Ed</a>
+			<a href="#name=Ann&lat=48.871330&lon=2.317495" class="kailink">Chris</a>
 			<a href="#name=Ann&lat=48.856451&lon=2.352483" class="kailink">Ann</a>
+			<a href="#name=Kai&lat=48.87908&lon=2.384734" class="kailink">Kai</a>
 		</div>
 	</form>
   <div id="mapid" style="width: 100%; height: 650px;"></div>
