--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			/ <a href="https://www.strava.com/dashboard?feed_type=my_activity">Strava</a>
 			/ Safe:
 			<a href="#name=Man&lat=48.87062&lon=2.31693" class="kailink">Man</a>
-			<a href="#name=Man&lat=48.854444&lon=2.320833" class="kailink">Ed</a>
-			<a href="#name=Ann&lat=48.871330&lon=2.317495" class="kailink">Chris</a>
+			<a href="#name=Ed&lat=48.854444&lon=2.320833" class="kailink">Ed</a>
+			<a href="#name=Chris&lat=48.871330&lon=2.317495" class="kailink">Chris</a>
 			<a href="#name=Ann&lat=48.856451&lon=2.352483" class="kailink">Ann</a>
 			<a href="#name=Kai&lat=48.87908&lon=2.384734" class="kailink">Kai</a>
 		</div>
@@ -32,8 +32,8 @@
   <script src="runs.js" type="text/javascript"></script>
   <script>
 	let name = 'Manu';
-	let lat = 48.87062;
-	let lon = 2.31693;
+    	let deflat = 48.856451;
+	let deflon = 2.352483;
 	let url = new URL(location.href);
 	window.onload = () => {
 		name = url.searchParams.get("name") || name;
@@ -51,9 +51,9 @@
 		displayMap(name);
 	}
 	function displayMap(name) {
-		var mymap = L.map('mapid').setView([lat, lon], 13);
+		var mymap = L.map('mapid').setView([deflat, deflon], 12);
 		L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
-			maxZoom: 18,
+			maxZoom: 19,
 			attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
 				'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
 				'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
