--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
   <div id="mapid" style="width: 100%; height: 650px;"></div>
   <script src="runs.js" type="text/javascript"></script>
   <script>
-	let name = 'Manu';
+	let defname = 'Ann';
     	let deflat = 48.856451;
 	let deflon = 2.352483;
 	let url = new URL(location.href);
 	window.onload = () => {
 		name = url.searchParams.get("name") || name;
-		lat = parseFloat(url.searchParams.get("lat")) || lat;
-		lon = parseFloat(url.searchParams.get("lon")) || lon;
+		lat = parseFloat(url.searchParams.get("lat")) || deflat;
+		lon = parseFloat(url.searchParams.get("lon")) || deflon;
 		console.log(`Welcome to your Safe Space, ${name}!`);
 		document.forms.myform.name.value = name;
 		document.forms.myform.lat.value = lat;
