context: link to Confinement de 2020 en France

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<a href="#name=Kai&lat=48.87908&lon=2.384734" class="kailink">Kai</a>
 			Sources: <a href="https://github.com/kaicarver/leaflet">GitHub</a>
 			/ <a href="https://www.strava.com/dashboard?feed_type=my_activity">Strava</a>
+			/ <a href="https://fr.wikipedia.org/wiki/Confinement_de_2020_en_France">Décret</a>
 		</div>
 	</form>
   <div id="mapid" style="width: 100%; height: 650px;"></div>
