--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <div id="mapid" style="width: 100%; height: 650px;"></div>
   <script src="runs.js" type="text/javascript"></script>
   <script>
-	let defname = 'Ann';
-	let deflat = 48.856451;
-	let deflon = 2.352483;
+	let defname = 'Kai';
+	let deflat = 48.87908;
+	let deflon = 2.384734;
 	let url = new URL(location.href);
 	window.onload = () => {
 		name = url.searchParams.get("name") || defname;
