--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			<input name="name" type="text" value="Toto" />
 			<input name="lat" type="text" value="48.87062" />
 			<input name="lon" type="text" value="2.31693" />
-			<input type="submit" />
-			is allowed to go jogging.
+			<input type="submit" value="was allowed"/>
+			to go jogging.
 			Safe:
 			<a href="#name=Man&lat=48.87062&lon=2.31693" class="kailink">Man</a>
 			<a href="#name=Ed&lat=48.854444&lon=2.320833" class="kailink">Ed</a>
